--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
-title: 郑首超
+title: Karna
 desctiption: Karna is a responsive jekyll theme which includes pinterest like pins.
-url: http://liberalman.github.io/
+url: http://webjeda.com/
 permalink: ':title/'
 
 markdown: kramdown
