--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
-title: Karna
-desctiption: Karna is a responsive jekyll theme which includes pinterest like pins.
-url: http://webjeda.com/
+title: Liberalman
+desctiption: Liberalman is a freedom blog.
+url: http://liberalman.github.io/
 permalink: ':title/'
 
 markdown: kramdown
