--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ url: http://liberalman.github.io/
 permalink: ':title/'
 
 markdown: kramdown
+kramdown:
+  input: GFM
 baseurl: ""
 
 
@@ -41,3 +43,7 @@ include: [_pages]
 version: 0.8
 
 gems: [jekyll-paginate, jekyll-seo-tag]
+
+# 开启分页功能
+paginate: 5
+paginate_path: "page:num"
