--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,11 @@ title: Liberalman
 desctiption: Liberalman is a freedom blog.
 url: http://liberalman.github.io/
 permalink: ':title/'
+# 博客的名字
+name: Liberty's blog
 
-markdown: kramdown
+# markdown的渲染引擎
+markdown: redcarpet
 kramdown:
   input: GFM
 baseurl: ""
