--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,4 @@ api-token:
 include: [_pages]
 version: 0.8
 
-gems: [jekyll-paginate, jekyll-seo-tag]
-
-# Search plugin
-lunr_search:
-excludes: [atom.xml]
+gems: [jekyll-paginate, jekyll-seo-tag, jekyll-lunr-js-search]
